--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                         I'm a software engineer and creative technologist who dabbles in interactive digital arts and audio, and I'm currently looking for fun and exciting projects to work on.
 
                         <br><br>
-                        
+                        Most recently I was a Machine Learning Engineer at Apple working on improving podcast discovery through search and recommendations.
                         In the past, I've built a recommendation engine for podcasts using machine learning at <a href="http://audiosear.ch" target="_blank">Pop Up Archive</a>, worked as a Venture Designer at <a href="http://www.ideo.com" target="_blank">IDEO</a>, built tools and testing infrastrure as a Software Engineer at <a href="http://bfy.tw/5g" target="_blank">Google</a>
                         and wrote automation frameworks to test robotics at <a href="http://www.spectralogic.com" target="_blank">Spectra Logic</a>.
 
