--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
             <div class="col-lg-12">
                 <h1 class="page-header">
                     <h3>
-                        I'm a software engineer and creative technologist who dabbles in interactive digital arts and audio, and I'm currently looking for fun and exciting projects to work on.
+                        I'm a machine learning engineer and creative technologist who dabbles in interactive digital arts and audio.
 
                         <br><br>
                         I'm currently a Machine Learning Engineer working at Hinge on the Dating Outcomes team, working on the matching algorithm and GenAI products.
@@ -80,10 +80,6 @@
                         and wrote automation frameworks to test robotics at <a href="http://www.spectralogic.com" target="_blank">Spectra Logic</a>.
 
                         I like building things in Python, Java, and various web technologies including Ruby on Rails, AngularJS, node.js, and p5.js.  In the past, I've worked in C++, Perl, and Matlab, but I think it's best we both stay far away from Perl.
-
-                        <br> <br>
-
-                        Here's a copy of my <a href="resume.pdf" target="_blank">resume</a>.
 
                         <br> <br>
 
