--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             <div class="col-lg-12">
                 <h1 class="page-header">
                     <h3>I'm a software engineer and creative technologist who uses machine learning and data to create interactive digital art and audio.</h3> <br>
+                    <br>
+                    <h3> This page is kind of frozen in time from 2017 :)
                 </h1>
             </div>
         </div>
