--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    <h3>I'm a software engineer and creative technologist who uses machine learning and data to create interactive digital art and audio.</h3> <br>
+                    <h3>I'm a machine learning engineer and creative technologist who uses machine learning and data to create interactive digital art and audio.</h3> <br>
                     <br>
                     <h3> This page is kind of frozen in time from 2017 :)
                 </h1>
